--- a/silo.ui
+++ b/silo.ui
@@ -33,9 +33,9 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>580</y>
-     <width>101</width>
-     <height>81</height>
+     <y>560</y>
+     <width>121</width>
+     <height>101</height>
     </rect>
    </property>
    <property name="text">
@@ -77,10 +77,10 @@
     <pixmap resource="uimd.qrc">:/pngg/capacity.png</pixmap>
    </property>
   </widget>
-  <widget class="QLabel" name="label_16">
+  <widget class="QLabel" name="capacitlbl">
    <property name="geometry">
     <rect>
-     <x>100</x>
+     <x>180</x>
      <y>140</y>
      <width>91</width>
      <height>16</height>
@@ -90,7 +90,7 @@
     <string>show_capacity</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_15">
+  <widget class="QLabel" name="levellbl">
    <property name="geometry">
     <rect>
      <x>90</x>
@@ -103,7 +103,7 @@
     <string>show_level</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="upgradebtn">
    <property name="geometry">
     <rect>
      <x>1010</x>
@@ -153,6 +153,35 @@
    </property>
    <property name="flat">
     <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="wheatlbl">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>140</y>
+     <width>55</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>140</y>
+     <width>21</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 10pt &quot;MS Shell Dlg 2&quot;;</string>
+   </property>
+   <property name="text">
+    <string>/</string>
    </property>
   </widget>
  </widget>
