--- a/warehouse.ui
+++ b/warehouse.ui
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="label_8">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>150</y>
+     <x>650</x>
+     <y>120</y>
      <width>91</width>
      <height>91</height>
     </rect>
@@ -32,11 +32,11 @@
     <pixmap resource="uimd.qrc">:/pngg/mikh.png</pixmap>
    </property>
   </widget>
-  <widget class="QLabel" name="label_12">
+  <widget class="QLabel" name="milklbl">
    <property name="geometry">
     <rect>
-     <x>710</x>
-     <y>420</y>
+     <x>780</x>
+     <y>390</y>
      <width>71</width>
      <height>31</height>
     </rect>
@@ -45,10 +45,10 @@
     <string>number</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_16">
+  <widget class="QLabel" name="capacitylbl">
    <property name="geometry">
     <rect>
-     <x>110</x>
+     <x>180</x>
      <y>140</y>
      <width>91</width>
      <height>16</height>
@@ -61,8 +61,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>170</y>
+     <x>330</x>
+     <y>140</y>
      <width>81</width>
      <height>71</height>
     </rect>
@@ -77,7 +77,7 @@
     <pixmap resource="uimd.qrc">:/pngg/029-spade.png</pixmap>
    </property>
   </widget>
-  <widget class="QLabel" name="label_15">
+  <widget class="QLabel" name="levellbl">
    <property name="geometry">
     <rect>
      <x>80</x>
@@ -90,11 +90,11 @@
     <string>show_level</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_11">
+  <widget class="QLabel" name="haylbl">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>420</y>
+     <x>440</x>
+     <y>390</y>
      <width>71</width>
      <height>31</height>
     </rect>
@@ -103,11 +103,11 @@
     <string>number</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_13">
+  <widget class="QLabel" name="sheeplbl">
    <property name="geometry">
     <rect>
-     <x>710</x>
-     <y>310</y>
+     <x>780</x>
+     <y>280</y>
      <width>71</width>
      <height>31</height>
     </rect>
@@ -132,11 +132,11 @@
     <pixmap resource="uimd.qrc">:/pngg/capacity.png</pixmap>
    </property>
   </widget>
-  <widget class="QLabel" name="label_10">
+  <widget class="QLabel" name="egglbl">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>305</y>
+     <x>440</x>
+     <y>275</y>
      <width>71</width>
      <height>31</height>
     </rect>
@@ -145,11 +145,11 @@
     <string>number</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_9">
+  <widget class="QLabel" name="shovellbl">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>190</y>
+     <x>440</x>
+     <y>160</y>
      <width>71</width>
      <height>31</height>
     </rect>
@@ -161,8 +161,8 @@
   <widget class="QLabel" name="label_7">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>290</y>
+     <x>650</x>
+     <y>260</y>
      <width>101</width>
      <height>81</height>
     </rect>
@@ -177,11 +177,11 @@
     <pixmap resource="uimd.qrc">:/pngg/016-sheep.png</pixmap>
    </property>
   </widget>
-  <widget class="QLabel" name="label_14">
+  <widget class="QLabel" name="naillbl">
    <property name="geometry">
     <rect>
-     <x>710</x>
-     <y>180</y>
+     <x>780</x>
+     <y>150</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -193,8 +193,8 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>390</y>
+     <x>650</x>
+     <y>360</y>
      <width>101</width>
      <height>91</height>
     </rect>
@@ -212,8 +212,8 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>500</y>
+     <x>900</x>
+     <y>120</y>
      <width>301</width>
      <height>51</height>
     </rect>
@@ -238,8 +238,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>250</x>
-     <y>290</y>
+     <x>320</x>
+     <y>260</y>
      <width>91</width>
      <height>81</height>
     </rect>
@@ -257,8 +257,8 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>350</y>
+     <x>330</x>
+     <y>360</y>
      <width>111</width>
      <height>91</height>
     </rect>
@@ -331,25 +331,56 @@
     <pixmap resource="uimd.qrc">:/pngg/gandom khone.png</pixmap>
    </property>
   </widget>
+  <widget class="QLabel" name="invlbl">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>140</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_10">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>140</y>
+     <width>16</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 12pt &quot;MS Shell Dlg 2&quot;;</string>
+   </property>
+   <property name="text">
+    <string>/</string>
+   </property>
+  </widget>
   <zorder>label_17</zorder>
   <zorder>label_8</zorder>
-  <zorder>label_12</zorder>
-  <zorder>label_16</zorder>
+  <zorder>milklbl</zorder>
+  <zorder>capacitylbl</zorder>
   <zorder>label_3</zorder>
-  <zorder>label_15</zorder>
-  <zorder>label_11</zorder>
-  <zorder>label_13</zorder>
+  <zorder>levellbl</zorder>
+  <zorder>haylbl</zorder>
+  <zorder>sheeplbl</zorder>
   <zorder>label_2</zorder>
-  <zorder>label_10</zorder>
-  <zorder>label_9</zorder>
+  <zorder>egglbl</zorder>
+  <zorder>shovellbl</zorder>
   <zorder>label_7</zorder>
-  <zorder>label_14</zorder>
+  <zorder>naillbl</zorder>
   <zorder>label_6</zorder>
   <zorder>pushButton_2</zorder>
   <zorder>label_4</zorder>
   <zorder>label_5</zorder>
   <zorder>pushButton</zorder>
   <zorder>label</zorder>
+  <zorder>invlbl</zorder>
+  <zorder>label_10</zorder>
  </widget>
  <resources>
   <include location="uimd.qrc"/>
