--- a/poultry.ui
+++ b/poultry.ui
@@ -29,10 +29,10 @@
     <pixmap resource="uimd.qrc">:/pngg/morghi page.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="upgardebtn">
    <property name="geometry">
     <rect>
-     <x>1040</x>
+     <x>1020</x>
      <y>20</y>
      <width>131</width>
      <height>61</height>
@@ -55,10 +55,10 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="returnbtn">
    <property name="geometry">
     <rect>
-     <x>950</x>
+     <x>930</x>
      <y>90</y>
      <width>301</width>
      <height>51</height>
@@ -113,11 +113,11 @@
     <pixmap resource="uimd.qrc">:/pngg/capacity.png</pixmap>
    </property>
   </widget>
-  <widget class="QLabel" name="label_16">
+  <widget class="QLabel" name="capacitylbl">
    <property name="geometry">
     <rect>
      <x>100</x>
-     <y>140</y>
+     <y>130</y>
      <width>91</width>
      <height>16</height>
     </rect>
@@ -126,7 +126,7 @@
     <string>show_capacity</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_15">
+  <widget class="QLabel" name="levellbl">
    <property name="geometry">
     <rect>
      <x>90</x>
@@ -139,13 +139,13 @@
     <string>show_level</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_3">
+  <widget class="QPushButton" name="feedbtn">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>460</y>
-     <width>141</width>
-     <height>51</height>
+     <x>410</x>
+     <y>370</y>
+     <width>191</width>
+     <height>91</height>
     </rect>
    </property>
    <property name="text">
@@ -165,11 +165,11 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_4">
+  <widget class="QPushButton" name="eggcollcentbtn">
    <property name="geometry">
     <rect>
-     <x>470</x>
-     <y>380</y>
+     <x>610</x>
+     <y>370</y>
      <width>181</width>
      <height>81</height>
     </rect>
@@ -194,7 +194,7 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>1030</x>
+     <x>1020</x>
      <y>160</y>
      <width>81</width>
      <height>71</height>
@@ -207,7 +207,7 @@
     <pixmap resource="uimd.qrc">:/pngg/hen.png</pixmap>
    </property>
   </widget>
-  <widget class="QLabel" name="label_5">
+  <widget class="QLabel" name="henlbl">
    <property name="geometry">
     <rect>
      <x>1110</x>
