--- a/wheat_farm.ui
+++ b/wheat_farm.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>640</width>
-    <height>338</height>
+    <width>778</width>
+    <height>426</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,10 +16,10 @@
   <widget class="QPushButton" name="pushButton_3">
    <property name="geometry">
     <rect>
-     <x>214</x>
-     <y>148</y>
-     <width>111</width>
-     <height>71</height>
+     <x>630</x>
+     <y>20</y>
+     <width>141</width>
+     <height>91</height>
     </rect>
    </property>
    <property name="text">
@@ -68,10 +68,10 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>24</x>
-     <y>218</y>
-     <width>121</width>
-     <height>61</height>
+     <x>330</x>
+     <y>330</y>
+     <width>131</width>
+     <height>101</height>
     </rect>
    </property>
    <property name="text">
@@ -94,8 +94,8 @@
   <widget class="QPushButton" name="pushButton_5">
    <property name="geometry">
     <rect>
-     <x>194</x>
-     <y>218</y>
+     <x>30</x>
+     <y>210</y>
      <width>111</width>
      <height>71</height>
     </rect>
@@ -120,10 +120,10 @@
   <widget class="QPushButton" name="pushButton_4">
    <property name="geometry">
     <rect>
-     <x>-6</x>
-     <y>28</y>
-     <width>141</width>
-     <height>61</height>
+     <x>-10</x>
+     <y>10</y>
+     <width>161</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="text">
@@ -143,23 +143,20 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QGraphicsView" name="graphicsView">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>701</width>
-     <height>351</height>
+     <width>781</width>
+     <height>431</height>
     </rect>
    </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="pixmap">
-    <pixmap resource="imigi.qrc">:/pht/mdd/gandom22.png</pixmap>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/pht/mdd/gandom22.png);</string>
    </property>
   </widget>
-  <zorder>label</zorder>
+  <zorder>graphicsView</zorder>
   <zorder>pushButton_2</zorder>
   <zorder>pushButton_3</zorder>
   <zorder>pushButton</zorder>
@@ -167,8 +164,8 @@
   <zorder>pushButton_4</zorder>
  </widget>
  <resources>
-  <include location="imigi.qrc"/>
   <include location="uimd.qrc"/>
+  <include location="imigi.qrc"/>
  </resources>
  <connections/>
 </ui>
